初始化邮件模块

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>xqoo-cloud-authorization</module>
         <module>xqoo-cloud-operation-log</module>
         <module>xqoo-cloud-code-generator</module>
+        <module>xqoo-cloud-email</module>
     </modules>
     <packaging>pom</packaging>
 
