--- a/xqoo-cloud-sms/pom.xml
+++ b/xqoo-cloud-sms/pom.xml
@@ -23,6 +23,13 @@
             <artifactId>aliyun-java-sdk-core</artifactId>
             <version>4.5.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.30</version>
+        </dependency>
+
         <dependency>
             <groupId>xqoo.cloud</groupId>
             <artifactId>xqoo-common-redis</artifactId>
