-新增支付模块 -新增rocketmq-common模块

--- a/xqoo-common/pom.xml
+++ b/xqoo-common/pom.xml
@@ -16,6 +16,7 @@
         <module>xqoo-common-redis</module>
         <module>xqoo-common-swagger2</module>
         <module>xqoo-common-bean</module>
+        <module>xqoo-common-rocketmq</module>
     </modules>
 
 
