--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
         <commonsLang.version>2.6</commonsLang.version>
         <slf4j-version>1.7.7</slf4j-version>
         <kaptcha.version>2.3.2</kaptcha.version>
-        <rocketmq-version>4.7.1</rocketmq-version>
+        <rocketmq-version>4.8.0</rocketmq-version>
         <org-jdom-version>1.1.3</org-jdom-version>
         <jwt.version>3.11.0</jwt.version>
         <aliyun.dysmsapi.version>1.1.0</aliyun.dysmsapi.version>
@@ -385,18 +385,16 @@
                 <artifactId>xqoo-common-swagger2</artifactId>
                 <version>${xqoo.version}</version>
             </dependency>
+            <!-- common公共库rocketMQ -->
+            <dependency>
+                <groupId>xqoo.cloud</groupId>
+                <artifactId>xqoo-common-rocketmq</artifactId>
+                <version>${xqoo.version}</version>
+            </dependency>
 
         </dependencies>
 
     </dependencyManagement>
-
-    <!--<dependencies>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>-->
 
     <build>
         <plugins>
