--- a/xqoo-third-pay/pom.xml
+++ b/xqoo-third-pay/pom.xml
@@ -29,6 +29,16 @@
             <artifactId>xqoo-common-swagger2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>xqoo.cloud</groupId>
+            <artifactId>xqoo-common-rocketmq</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
         <dependency>
             <groupId>com.aliyun</groupId>
