系统附件模块 协议功能

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>xqoo-cloud-operation-log</module>
         <module>xqoo-cloud-code-generator</module>
         <module>xqoo-cloud-email</module>
+        <module>xqoo-cloud-annex</module>
     </modules>
     <packaging>pom</packaging>
 
