--- a/third-party-jar/nacos/conf/application.properties
+++ b/third-party-jar/nacos/conf/application.properties
@@ -37,7 +37,7 @@ db.num=1
 ### Connect URL of DB:
 db.url.0=jdbc:mysql://127.0.0.1:3306/xqoo_nacos_config?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=Asia/Shanghai
 db.user=root
-db.password=gao2236
+db.password=123456
 
 
 #*************** Naming Module Related Configurations ***************#
