新建sms模块，策略模式实现多平台无缝切换

--- a/third-party-jar/nacos/conf/application.properties
+++ b/third-party-jar/nacos/conf/application.properties
@@ -35,9 +35,10 @@ spring.datasource.platform=mysql
 db.num=1
 
 ### Connect URL of DB:
-db.url.0=jdbc:mysql://127.0.0.1:3306/xqoo_nacos_config?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=Asia/Shanghai
+db.url.0=jdbc:mysql://47.103.200.242:3306/xqoo_nacos_config?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=Asia/Shanghai
 db.user=root
-db.password=123456
+db.password=gao2236
+
 
 
 #*************** Naming Module Related Configurations ***************#
