--- a/third-party-jar/nacos/conf/application.properties
+++ b/third-party-jar/nacos/conf/application.properties
@@ -19,6 +19,7 @@
 server.servlet.contextPath=/nacos
 ### Default web server port:
 server.port=8184
+
 #*************** Network Related Configurations ***************#
 ### If prefer hostname over ip for Nacos server addresses in cluster.conf:
 # nacos.inetutils.prefer-hostname-over-ip=false
@@ -28,18 +29,22 @@ server.port=8184
 
 
 #*************** Config Module Related Configurations ***************#
-### If user MySQL as datasource:
+### If use MySQL as datasource:
 spring.datasource.platform=mysql
 
 ### Count of DB:
 db.num=1
 
 ### Connect URL of DB:
-db.url.0=jdbc:mysql://47.103.200.242:3306/xqoo_nacos_config?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=Asia/Shanghai
-db.user=root
-db.password=gao2236
+db.url.0=jdbc:mysql://47.103.200.242:3306/xqoo_nacos_config?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
+db.user.0=root
+db.password.0=gao2236
 
-
+### Connection pool configuration: hikariCP
+db.pool.config.connectionTimeout=30000
+db.pool.config.validationTimeout=10000
+db.pool.config.maximumPoolSize=20
+db.pool.config.minimumIdle=2
 
 #*************** Naming Module Related Configurations ***************#
 ### Data dispatch task execution period in milliseconds:
@@ -60,7 +65,7 @@ db.password=gao2236
 nacos.naming.empty-service.auto-clean=true
 nacos.naming.empty-service.clean.initial-delay-ms=50000
 nacos.naming.empty-service.clean.period-time-ms=30000
-nacos.standalone=true
+
 
 #*************** CMDB Module Related Configurations ***************#
 ### The interval to dump external CMDB in seconds:
@@ -106,10 +111,10 @@ server.tomcat.basedir=
 
 #*************** Access Control Related Configurations ***************#
 ### If enable spring security, this option is deprecated in 1.2.0:
-# spring.security.enabled=false
+#spring.security.enabled=false
 
 ### The ignore urls of auth, is deprecated in 1.2.0:
-nacos.security.ignore.urls=/,/error,/**/*.css,/**/*.js,/**/*.html,/**/*.map,/**/*.svg,/**/*.png,/**/*.ico,/console-fe/public/**,/v1/auth/**,/v1/console/health/**,/actuator/**,/v1/console/server/**
+nacos.security.ignore.urls=/,/error,/**/*.css,/**/*.js,/**/*.html,/**/*.map,/**/*.svg,/**/*.png,/**/*.ico,/console-ui/public/**,/v1/auth/**,/v1/console/health/**,/actuator/**,/v1/console/server/**
 
 ### The auth system to use, currently only 'nacos' is supported:
 nacos.core.auth.system.type=nacos
@@ -126,6 +131,13 @@ nacos.core.auth.default.token.secret.key=SecretKey012345678901234567890123456789
 ### Turn on/off caching of auth information. By turning on this switch, the update of auth information would have a 15 seconds delay.
 nacos.core.auth.caching.enabled=true
 
+### Since 1.4.1, Turn on/off white auth for user-agent: nacos-server, only for upgrade from old version.
+nacos.core.auth.enable.userAgentAuthWhite=true
+
+### Since 1.4.1, worked when nacos.core.auth.enabled=true and nacos.core.auth.enable.userAgentAuthWhite=false.
+### The two properties is the white list for auth and used by identity the request from other server.
+nacos.core.auth.server.identity.key=
+nacos.core.auth.server.identity.value=
 
 #*************** Istio Related Configurations ***************#
 ### If turn on the MCP server:
@@ -154,6 +166,12 @@ nacos.istio.mcp.server.enabled=false
 ## for AddressServerMemberLookup
 # Maximum number of retries to query the address server upon initialization
 # nacos.core.address-server.retry=5
+## Server domain name address of [address-server] mode
+# address.server.domain=jmenv.tbsite.net
+## Server port of [address-server] mode
+# address.server.port=8080
+## Request address of [address-server] mode
+# address.server.url=/nacos/serverlist
 
 #*************** JRaft Related Configurations ***************#
 
@@ -169,4 +187,3 @@ nacos.istio.mcp.server.enabled=false
 # nacos.core.protocol.raft.data.read_index_type=ReadOnlySafe
 ### rpc request timeout, default 5 seconds
 # nacos.core.protocol.raft.data.rpc_request_timeout_ms=5000
-
