--- a/xqoo-file-manager/pom.xml
+++ b/xqoo-file-manager/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>aliyun-sdk-oss</artifactId>
         </dependency>
 
+        <!-- okHttp -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>xqoo.cloud</groupId>
             <artifactId>xqoo-common-rocketmq</artifactId>
