--- a/xqoo-cloud-email/pom.xml
+++ b/xqoo-cloud-email/pom.xml
@@ -29,6 +29,13 @@
             <artifactId>xqoo-common-swagger2</artifactId>
         </dependency>
 
+        <dependency>
+
+            <groupId>org.springframework.boot</groupId>
+
+            <artifactId>spring-boot-starter-mail</artifactId>
+
+        </dependency>
 
         <!-- 单元测试 -->
         <dependency>
