--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <mapper.starter.version>2.1.5</mapper.starter.version>
         <oshi.version>3.9.1</oshi.version>
         <commons.io.version>2.5</commons.io.version>
+        <commons.text.version>1.9</commons.text.version>
         <commons.fileupload.version>1.3.3</commons.fileupload.version>
         <jsoup.version>1.11.3</jsoup.version>
         <poi.version>3.17</poi.version>
@@ -190,6 +191,13 @@
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${commons.io.version}</version>
+            </dependency>
+
+            <!-- apache 文本工具类 -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-text</artifactId>
+                <version>${commons.text.version}</version>
             </dependency>
 
             <!--文件上传工具类 -->
