--- a/xqoo-common/xqoo-common-core/pom.xml
+++ b/xqoo-common/xqoo-common-core/pom.xml
@@ -84,6 +84,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
         </dependency>
