--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>xqoo-cloud-operation-log</module>
         <module>xqoo-cloud-code-generator</module>
         <module>xqoo-cloud-email</module>
+        <module>xqoo-cloud-sms</module>
         <module>xqoo-cloud-annex</module>
         <module>xqoo-file-manager</module>
     </modules>
@@ -43,11 +44,10 @@
         <druid.version>1.1.14</druid.version>
         <bitwalker.version>1.19</bitwalker.version>
         <pagehelper.boot.version>1.3.0</pagehelper.boot.version>
-        <mapper.starter.version>2.1.5</mapper.starter.version>
         <oshi.version>3.9.1</oshi.version>
         <commons.io.version>2.5</commons.io.version>
         <commons.text.version>1.9</commons.text.version>
-        <commons.fileupload.version>1.3.3</commons.fileupload.version>
+        <commons.fileupload.version>1.4</commons.fileupload.version>
         <jsoup.version>1.11.3</jsoup.version>
         <poi.version>3.17</poi.version>
         <velocity.version>1.7</velocity.version>
@@ -56,15 +56,14 @@
         <common-pool.version>2.6.2</common-pool.version>
         <swagger.version>2.9.2</swagger.version>
         <swagger-ui.version>1.9.5</swagger-ui.version>
-        <io-swagger.version>1.5.21</io-swagger.version>
+        <io-swagger.version>1.6.2</io-swagger.version>
         <guava.version>30.0-jre</guava.version>
         <codec.version>1.9</codec.version>
         <okhttp.version>3.8.1</okhttp.version>
         <myBatisPlus.version>3.4.0</myBatisPlus.version>
-        <redisson.version>3.13.5</redisson.version>
-        <commonsCollections.version>3.2.2</commonsCollections.version>
+        <commonsCollections.version>4.4</commonsCollections.version>
         <commonsLang.version>2.6</commonsLang.version>
-        <slf4j-version>1.7.7</slf4j-version>
+        <slf4j-version>1.7.30</slf4j-version>
         <kaptcha.version>2.3.2</kaptcha.version>
         <rocketmq-version>4.8.0</rocketmq-version>
         <org-jdom-version>1.1.3</org-jdom-version>
@@ -223,8 +222,8 @@
 
             <!-- Apache Commons -->
             <dependency>
-                <groupId>commons-collections</groupId>
-                <artifactId>commons-collections</artifactId>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
                 <version>${commonsCollections.version}</version>
             </dependency>
             <dependency>
