-增加二维码功能模块common-qrcode

--- a/xqoo-common/pom.xml
+++ b/xqoo-common/pom.xml
@@ -17,6 +17,7 @@
         <module>xqoo-common-swagger2</module>
         <module>xqoo-common-bean</module>
         <module>xqoo-common-rocketmq</module>
+        <module>xqoo-common-qrcode</module>
     </modules>
 
 
