--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ third-party-jar/nacos/logs 65 v
 third-party-jar/nacos/bin/logs
 third-party-jar/nacos/bin/work
 third-party-jar/nacos/bin/target
+xqoo-cloud-integral-center
 application-local-test.yml
 *.iml
 out
