--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>xqoo-cloud-sms</module>
         <module>xqoo-cloud-annex</module>
         <module>xqoo-file-manager</module>
+<!--        <module>xqoo-cloud-integral-center</module>-->
     </modules>
     <packaging>pom</packaging>
 
@@ -41,15 +42,15 @@
         <feign-form.version>3.8.0</feign-form.version>
         <spring-boot-admin.version>2.3.0</spring-boot-admin.version>
         <spring-boot.mybatis>2.1.3</spring-boot.mybatis>
-        <druid.version>1.1.14</druid.version>
+        <druid.version>1.2.3</druid.version>
         <bitwalker.version>1.19</bitwalker.version>
         <pagehelper.boot.version>1.3.0</pagehelper.boot.version>
         <oshi.version>3.9.1</oshi.version>
         <commons.io.version>2.5</commons.io.version>
         <commons.text.version>1.9</commons.text.version>
         <commons.fileupload.version>1.4</commons.fileupload.version>
-        <jsoup.version>1.11.3</jsoup.version>
-        <poi.version>3.17</poi.version>
+        <jsoup.version>1.13.1</jsoup.version>
+        <poi.version>4.1.2</poi.version>
         <velocity.version>1.7</velocity.version>
         <jackson.version>2.11.2</jackson.version>
         <hutool.version>5.5.1</hutool.version>
@@ -68,10 +69,11 @@
         <rocketmq-version>4.8.0</rocketmq-version>
         <org-jdom-version>1.1.3</org-jdom-version>
         <jwt.version>3.11.0</jwt.version>
+        <google.zxing.version>3.4.1</google.zxing.version>
         <aliyun.dysmsapi.version>1.1.0</aliyun.dysmsapi.version>
-        <aliyun.core.version>4.4.2</aliyun.core.version>
-        <aliyun.java.sdk.sts.version>2.1.6</aliyun.java.sdk.sts.version>
-        <alipay.sdk.java.version>3.3.87.ALL</alipay.sdk.java.version>
+        <aliyun.core.version>4.5.17</aliyun.core.version>
+        <aliyun.java.sdk.sts.version>3.0.1</aliyun.java.sdk.sts.version>
+        <alipay.sdk.java.version>4.11.21.ALL</alipay.sdk.java.version>
         <alioss.sdk.java.version>3.10.2</alioss.sdk.java.version>
     </properties>
 
@@ -370,6 +372,17 @@
                 <artifactId>java-jwt</artifactId>
                 <version>${jwt.version}</version>
             </dependency>
+            <!-- 谷歌二维码工具包 -->
+            <dependency>
+                <groupId>com.google.zxing</groupId>
+                <artifactId>core</artifactId>
+                <version>${google.zxing.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.zxing</groupId>
+                <artifactId>javase</artifactId>
+                <version>${google.zxing.version}</version>
+            </dependency>
             <!-- 核心模块 -->
             <dependency>
                 <groupId>xqoo.cloud</groupId>
@@ -404,6 +417,13 @@
             <dependency>
                 <groupId>xqoo.cloud</groupId>
                 <artifactId>xqoo-common-rocketmq</artifactId>
+                <version>${xqoo.version}</version>
+            </dependency>
+
+            <!-- common公共库二维码 -->
+            <dependency>
+                <groupId>xqoo.cloud</groupId>
+                <artifactId>xqoo-common-qrcode</artifactId>
                 <version>${xqoo.version}</version>
             </dependency>
 
