-修改git屏蔽文件，屏蔽两个模块上传 -修改AES加密方式为CBC加密

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>xqoo-cloud-annex</module>
         <module>xqoo-file-manager</module>
         <module>xqoo-cloud-integral-center</module>
+        <module>xqoo-device-manager</module>
     </modules>
     <packaging>pom</packaging>
 
