--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 D:
 xqoo-apollo-config
 xqoo-cloud-integral-center
+xqoo-device-manager
 third-party-jar/nacos/data
 third-party-jar/nacos/logs 65 v
 third-party-jar/nacos/bin/logs
