--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,15 @@
 .idea
 .gradle
 D:
-xqoo-apollo-config
 xqoo-cloud-integral-center
-xqoo-device-manager
 third-party-jar/nacos/data
 third-party-jar/nacos/logs 65 v
 third-party-jar/nacos/bin/logs
 third-party-jar/nacos/bin/work
 third-party-jar/nacos/bin/target
 application-local-test.yml
+.attach_pid*
+*_err_pid*
 *.iml
 out
 gen
