-增加拆除设备限制，无法在存在可用销售信息时拆除设备 -增加但设备资源承载量的字段 -增加设备信息展示设备是否被某个销售信息绑定

--- a/xqoo-cloud-authorization/src/main/resources/bootstrap.yml
+++ b/xqoo-cloud-authorization/src/main/resources/bootstrap.yml
@@ -66,7 +66,7 @@ spring:
             data-type: json
             rule-type: flow
 
-mybatis:
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  mapper-locations: classpath:mapper/*.xml
+#mybatis:
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#  mapper-locations: classpath:mapper/*.xml
