--- a/xqoo-cloud-operation-log/pom.xml
+++ b/xqoo-cloud-operation-log/pom.xml
@@ -33,28 +33,28 @@
         </dependency>
     </dependencies>
 
-    <!--<build>
+    <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.0.1.RELEASE</version>
+                <version>2.3.4.RELEASE</version>
                 <configuration>
-                    &lt;!&ndash; 指定该Main Class为全局的唯一入口 &ndash;&gt;
+                    <!-- 指定该Main Class为全局的唯一入口 -->
                     <mainClass>com.xqoo.ApplicationOperationLog</mainClass>
                     <layout>ZIP</layout>
                 </configuration>
                 <executions>
                     <execution>
                         <goals>
-                            <goal>repackage</goal>&lt;!&ndash;可以把依赖的包都打包到生成的Jar包中&ndash;&gt;
+                            <goal>repackage</goal><!--可以把依赖的包都打包到生成的Jar包中-->
                         </goals>
                     </execution>
                 </executions>
             </plugin>
-            &lt;!&ndash;使用docker-maven-plugin插件&ndash;&gt;
-            <plugin>
+            <!--使用docker-maven-plugin插件-->
+            <!--<plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>1.0.0</version>
@@ -91,8 +91,8 @@
                         </resource>
                     </resources>
                 </configuration>
-            </plugin>
+            </plugin>-->
         </plugins>
-    </build>-->
+    </build>
 
 </project>
